src/components/ProfileCard/ProfileOverview/ProfileOverview.module.css
.userInfoContainer {
    display: grid;
    grid-template-columns: 28% 72%;
    margin: 20px 20px 10px 20px;
    overflow: hidden;
}

.userProfilePicContainer {
    width: 100%;
    aspect-ratio: 1 / 1;
    background-color: var(--palette-200);
    border: solid 1px var(--palette-300);
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.userProfilePicContainer span {
    width: 38px;
    height: 38px;
    font-size: 38px;
    margin: 0;
}

.userInfo {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-start;
    margin: 10px 0 10px 20px;
}

.userName {
    margin: 0;
    width: 100%;
    color: var(--palette-950);
    font-weight: 700;
    text-wrap: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.presenceIndicator {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    height: 20px;
    margin-bottom: 10px;
}

.studentStatusIndicator {
    width: 10px;
    height: 10px;
    border-radius: 50%;
    margin-right: 5px;
}

.studentStatusLabel {
    margin: 0;
    font-size: 16px;
    font-weight: 500;
    color: var(--palette-900);
}

.present {
    background-color: var(--palette-700);
}
.absent {
    background-color: var(--palette-300);
}

.schoolName {
    font-weight: 400;
    font-size: 16px;
    color: var(--palette-800);
}

